myteo/test/analyze/main_function/multiple_mains_same_file.exp
ERROR: test/analyze/main_function/multiple_mains_same_file.myte:3:4 Main function has already been declared
 3 | fun main() {}
   |     ^^^^